# jarvis

./: .gitignore  README.md  pyproject.toml
digest/: config.py  daemon.py  errors.py  fetch.py  kb.py  llm.py  rag.py  rag_cli.py  run.py  score.py
digest/arxiv/: fetch.py
digest/biorxiv/: fetch.py
digest/kb/: cli.py  convert.py  images.py  store.py
digest/pipeline/: run.py
docs/: CHANGELOG.md  DESIGN.md  LAUNCHD_SETUP.md  ROADMAP.md  TESTING.md  TODO.md
jarvis/chat/: chat.py  sessions.py  skills.py
jarvis/core/: config.py  errors.py  llm.py
jarvis/digest/: import_digest.py
jarvis/digest/arxiv/: convert.py  fetch.py
jarvis/digest/biorxiv/: fetch.py
jarvis/digest/pipeline/: format.py  run.py  score.py
jarvis/kb/: annotations.py  cli.py  convert.py  metadata.py  store.py
jarvis/sync/: daemon.py  status.py
jarvis/webapp/: app.py  index.html  run.py
jarvis/webapp/static/: app.js  style.css
tests/: conftest.py  test_annotations.py  test_arxiv_convert.py  test_arxiv_fetch.py  test_biorxiv_fetch.py  test_chat_logging.py  test_chat_tools.py  test_config.py  test_daemon.py  test_errors.py  test_images.py  test_kb_cli.py  test_llm.py  test_metadata.py  test_pdf_convert.py  test_pipeline_run.py  test_privacy_guard.py  test_reingest_replace.py  test_retrieval_quality.py  test_security.py  test_sessions.py  test_settings.py  test_skills.py  test_store.py  test_webapp_chat.py  test_webapp_papers.py
vault_chat/: chat.py  sessions.py  skills.py
webapp/: app.py  index.html  run.py
webapp/static/: app.js  style.css
