[project]
name = "paper-digest"
version = "0.1.0"
description = "Daily arXiv paper digest with local LLM scoring and Obsidian vault chat"
requires-python = ">=3.12"
dependencies = [
    "marker-pdf>=1.10.2",
    "ollama>=0.6.1",
    "requests>=2.33.1",
    "chromadb>=0.6.0",
    "sentence-transformers>=3.0.0",
    "anthropic>=0.46.0",
]

[tool.setuptools.packages.find]
include = ["digest*", "vault_chat*"]

[project.scripts]
run-digest = "digest.run:main"
convert-pdf = "digest.convert:main"
vault-chat = "vault_chat.chat:main"
kb = "digest.kb:main"
